force-app/main/default/objects/Exam__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exam is Generally Available to Candidate?</description>
    <inlineHelpText>Exam is Generally Available to Candidate?  e.g. Theory F is NOT</inlineHelpText>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>