force-app/main/default/objects/Exam__c/fields/Custom_Exam__c.field-meta.xml
<CustomField>
    <fullName>Custom_Exam__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom Created Exam</description>
    <label>Custom Exam</label>
    <type>Checkbox</type>
</CustomField>