force-app/main/default/objects/Exam__c/fields/Number_of_Questions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Questions__c</fullName>
    <description>Number of questions in the exam</description>
    <inlineHelpText>Number of questions in this exam.e.g. 12,20,50,60</inlineHelpText>
    <label>Number of Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>