force-app/main/default/objects/Exam__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of exam</description>
    <inlineHelpText>Type of exam</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GSP</fullName>
            </value>
            <value>
                <fullName>Theory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>